--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@ input:checked + .slider:before {
         <button onclick="startGame('hard')" class="difficulty-button">Сложный</button>
         <button onclick="startGame('expert')" class="difficulty-button">Эксперт</button>
         <button onclick="startGame('extreme')" class="difficulty-button">Экстремальный</button>
+        <button onclick="location.href='statistics.html'" class="difficulty-button">Статистика</button> 
     </div>
     <label class="theme-switch">
         <img src="sun.png" alt="Солнце" class="sun-icon" id="sun-icon"> <!-- Слева -->
@@ -627,6 +628,50 @@ input:checked + .slider:before {
 </div>
 
     <script>
+
+let statistics = {
+    easy: { wins: 0, bestTime: "00:00" },
+    medium: { wins: 0, bestTime: "00:00" },
+    hard: { wins: 0, bestTime: "00:00" },
+    expert: { wins: 0, bestTime: "00:00" },
+    extreme: { wins: 0, bestTime: "00:00" },
+    total: { wins: 0, bestTime: "00:00" }
+};
+
+function updateStatistics(level, elapsedTime) {
+    // Загружаем текущую статистику из localStorage
+    statistics = JSON.parse(localStorage.getItem('sudokuStatistics')) || statistics;
+
+    // Обновляем статистику
+    statistics[level].wins += 1;
+
+    // Обновляем лучшее время
+    if (statistics[level].bestTime === "00:00" || compareTimes(elapsedTime, statistics[level].bestTime) < 0) {
+        statistics[level].bestTime = elapsedTime;
+    }
+
+    // Обновляем общее количество побед и лучшее время
+    statistics.total.wins += 1;
+    // Логика для общего времени, можете добавить на свой вкус.
+
+    // Сохраняем обновленную статистику в localStorage
+    localStorage.setItem('sudokuStatistics', JSON.stringify(statistics));
+}
+
+function compareTimes(time1, time2) {
+    const [min1, sec1] = time1.split(':').map(Number);
+    const [min2, sec2] = time2.split(':').map(Number);
+    return min1 * 60 + sec1 - (min2 * 60 + sec2);
+}
+
+// Обновление статистики при выигрыше
+function onGameWin() {
+    const elapsedTime = document.getElementById('time').innerText; // Получаем текущее время
+    updateStatistics(currentLevel, elapsedTime);
+    displayWinModal(); // Показываем модальное окно выигрыша
+}
+
+
 
 // Инициализация VK Bridge
 vkBridge.send("VKWebAppInit", {});
@@ -1136,16 +1181,16 @@ function drawGrid(board, grid)
     }
 }
 
+// Подразумевается, что функция для окончания игры уже существует.
 function checkWin() {
     const grid = getGridFromBoard(); // Получите текущее состояние сетки из игрового поля
-    // Проверяем, все ли ячейки заполнены и верны
     const isComplete = grid.every(row => row.every(cell => cell !== null));
     const isCorrect = grid.every((row, rowIndex) => row.every((cell, colIndex) => {
         return cell === solutionGrid[rowIndex][colIndex]; // Сравниваем с решением
     }));
 
     if (isComplete && isCorrect) {
-        displayWinModal(); // Покажем модальное окно выигрыша
+        onGameWin(); // Вызываем обновление статистики
     }
 }
 
