--- a/index.html
+++ b/index.html
@@ -244,13 +244,14 @@ table {
 }
 
 .modal-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s, transform 0.2s;
-    background-color: #cfcccc; /* Цвет фона кнопки */
+    background-color: #e2e2e2;         /* Цвет фона кнопки, такой же как у ячеек */
+    border: 2px solid #000000;        /* Рамка с синим цветом */
+    color: rgb(0, 0, 0); /* Цвет текста */
+    border-radius: 5px; /* Закругляем углы */
+    padding: 10px; /* Отступ внутри кнопки */
+    font-size: 1rem; /* Размер шрифта для текста кнопки */
+    cursor: pointer; /* Устанавливаем курсор на "указатель" */
+    transition: background-color 0.3s; /* Плавный переход цвета фона */
     margin: 5px; /* Отступ между кнопками */
 }
 
@@ -328,11 +329,11 @@ table {
     }
 
     .highlight-row {
-        background-color: #0000000a; /* Цвет для выделенной строки */
+        background-color: #0000000e; /* Цвет для выделенной строки */
     }
 
     .highlight-col {
-        background-color: #0000000a;; /* Цвет для выделенного столбца */
+        background-color: #0000000e;; /* Цвет для выделенного столбца */
     }
     .highlight-selected {
         background-color: #008cff94; /* Цвет для выделенной ячейки */
@@ -431,30 +432,6 @@ table {
     margin: 10px auto; /* Устанавливаем отступы сверху и снизу, центруем кнопки */
 }
 
-.loss-button {
-    background-color: #e2e2e2;         /* Цвет фона кнопки */
-    border: 2px solid #000000;        /* Рамка с черным цветом */
-    color: rgb(0, 0, 0); /* Цвет текста */
-    padding: 15px; /* Отступы */
-    border-radius: 5px; /* Закругленные углы */
-    font-size: 16px; /* Размер шрифта */
-    cursor: pointer; /* Указатель при наведении */
-    transition: background-color 0.3s; /* Плавный переход цвета при наведении */
-}
-
-
-/* Добавление более специфичного селектора, чтобы убедиться, что стили применяются */
-.modal-button.loss-button {
-    background-color: #e2e2e2;         /* Цвет фона кнопки, такой же как у ячеек */
-    border: 2px solid #000000;        /* Рамка с черным цветом */
-    color: rgb(0, 0, 0); /* Цвет текста */
-    padding: 15px; /* Отступы */
-    border-radius: 5px; /* Закругленные углы */
-    font-size: 16px; /* Размер шрифта */
-    cursor: pointer; /* Указатель при наведении */
-}
-
-
 .theme-switch input {
     position: absolute; /* Перемещаем его из потока документа */
     width: 60px; /* Задаем фиксированные размеры, чтобы он не занимал лишнее место */
@@ -521,7 +498,7 @@ input:checked + .slider:before {
 .moon-icon {
     width: 24px; /* Установите нужный размер */
     height: 24px; /* Установите нужный размер */
-    margin-left: 10px; /* Отступ между слайдером и иконкой луны */
+    margin-left: 0px; /* Отступ между слайдером и иконкой луны */
 }
 
 .pause-modal {
@@ -572,23 +549,40 @@ body.dark .pause-modal > div {
     color: #d6d6d6; /* Цвет текста для темной темы */
 }
 
-/* Стили для модального окна выигрыша */
 body.dark .win-modal > div {
     background: #2b2b2b; /* Темный фон для модального окна выигрыша */
     color: #d6d6d6; /* Цвет текста для темной темы */
 }
 
+body.dark .win-modal button {
+    background-color: #606479; /* Темный фон для кнопок в модальном окне */
+    color: #d6d6d6; /* Цвет текста для кнопок в темной теме */
+    border-color: #606479; /* Темная граница для кнопок */
+}
+
 body.dark .resume-button {
-    background-color: #e2e2e2;         /* Цвет фона кнопки */
-    border: 2px solid #000000;        /* Рамка с черным цветом */
-    color: rgb(0, 0, 0); /* Цвет текста */
+    background-color: #606479; /* Темный фон для кнопок в модальном окне */
+    color: #d6d6d6; /* Цвет текста для кнопок в темной теме */
+    border-color: #606479; /* Темная граница для кнопок */
 }
 
 body.dark .restart-button {
-    background-color: #e2e2e2;         /* Цвет фона кнопки */
-    border: 2px solid #000000;        /* Рамка с черным цветом */
-    color: rgb(0, 0, 0); /* Цвет текста */
+    background-color: #606479; /* Темный фон для кнопок в модальном окне */
+    color: #d6d6d6; /* Цвет текста для кнопок в темной теме */
+    border-color: #606479; /* Темная граница для кнопок */
 }
+
+body.dark #game-over-modal > div {
+    background: #2b2b2b; /* Темный фон для модального окна "Game Over" */
+    color: #d6d6d6; /* Цвет текста для темной темы */
+}
+
+body.dark #game-over-modal button {
+    background-color: #606479; /* Темный фон для кнопок в модальном окне */
+    color: #d6d6d6; /* Цвет текста для кнопок в темной теме */
+    border-color: #606479; /* Темная граница для кнопок */
+}
+
 
     </style>
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
@@ -603,7 +597,7 @@ body.dark .restart-button {
         <button onclick="startGame('hard')" class="difficulty-button">Сложный</button>
         <button onclick="startGame('expert')" class="difficulty-button">Эксперт</button>
         <button onclick="startGame('extreme')" class="difficulty-button">Экстремальный</button>
-        <button onclick="location.href='statistics.html'" class="difficulty-button">Статистика</button> 
+        <button onclick="location.href='statistics.html'" class="difficulty-button">🏆Статистика🏆</button> 
     </div>
     <label class="theme-switch">
         <img src="sun.png" alt="Солнце" class="sun-icon" id="sun-icon"> <!-- Слева -->
@@ -659,9 +653,9 @@ body.dark .restart-button {
         <div>
             <h2 style="margin: 0; font-size: 24px;">Вы проиграли</h2>
             <div style="margin-top: 30px; display: flex; flex-direction: column; align-items: center;">
-                <button onclick="restartGame()" class="modal-button loss-button">Начать заново</button>
-                <button id="free-attempt-button" class="modal-button loss-button">Бесплатная попытка</button>
-                <button onclick="showMenu()" class="modal-button loss-button">В меню</button>
+                <button onclick="restartGame()" class="modal-button">Начать заново</button>
+                <button id="free-attempt-button" class="modal-button">Бесплатная попытка</button>
+                <button onclick="showMenu()" class="modal-button">В меню</button>
             </div>
         </div>
     </div>
@@ -909,18 +903,26 @@ function selectNumber(num)
         const cellRow = selectedCell.parentElement.rowIndex;
         const cellCol = selectedCell.cellIndex;
 
-        // Проверяем на допустимость по полному решению
-        if (solutionGrid[cellRow][cellCol] === num) 
+        // Проверяем, является ли ячейка изначально заполненной
+        if (initialNumbers[cellRow][cellCol] === null) 
         {
-            selectedCell.textContent = num;
-            selectedCell.classList.add('player-number');
-            selectedCell.classList.remove('incorrect');
-        } else 
-        {
-            selectedCell.classList.add('incorrect'); // Помечаем ячейку, как неправильную
-            selectedCell.textContent = num; // Устанавливаем введенное число
-            loseLife(); // Убрать жизнь
+            // Если ячейка не была изначально заполнена, мы можем заменить её
+            // Проверяем на допустимость по полному решению
+            if (solutionGrid[cellRow][cellCol] === num) 
+            {
+                selectedCell.textContent = num;
+                selectedCell.classList.add('player-number');
+                selectedCell.classList.remove('incorrect');
+            } 
+            else 
+            {
+                selectedCell.classList.add('incorrect'); // Помечаем ячейку, как неправильную
+                selectedCell.textContent = num; // Устанавливаем введенное число
+                loseLife(); // Убрать жизнь
+            }
         }
+        // Если ячейка изначально заполнена, ничего не делаем.
+
         selectedCell.classList.remove('selected');
         checkWin();
     }
