--- a/statistics.html
+++ b/statistics.html
@@ -17,21 +17,21 @@ body.dark h1 {
 
 /* Стили для таблицы в темной теме */
 body.dark table {
-    border: 3px solid #606479; /* Цвет контура таблицы в темной теме */
+    border: 3px solid #d6d6d6; /* Цвет контура таблицы в темной теме */
 }
 
 /* Стили для заголовка таблицы в темной теме */
 body.dark th {
-    background-color: #292a33; /* Цвет шапки таблицы в темной теме */
+    background-color: #42455a; /* Цвет шапки таблицы в темной теме */
     color: #ffffff; /* Белый текст */
-    border: 2px solid #606479; /* Цвет границ заголовков таблицы */
+    border: 2px solid #d6d6d6; /* Цвет границ заголовков таблицы */
 }
 
 /* Стили для ячеек таблицы в темной теме */
 body.dark td {
-    background-color: #444; /* Цвет фона ячеек в темной теме */
+    background-color: #33373d; /* Цвет фона ячеек в темной теме */
     color: #d6d6d6; /* Цвет текста в ячейках */
-    border-color: #555; /* Цвет рамки для ячеек */
+    border-color: #d6d6d6; /* Цвет рамки для ячеек */
 }
 
             /* Стили для кнопки в темной теме */
