--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     background-color: #f7f9fc;
     padding: 1rem; /* Добавьте немного отступа */
     overflow: hidden; /* Убирает прокрутку по всей странице */
+    transition: background-color 0.5s ease, color 0.5s ease; /* Плавный переход цвета фона и текста */
 }
         body.dark {
             background-color: #2b2b2b; /* Темный фон */
