--- a/index.html
+++ b/index.html
@@ -828,14 +828,22 @@ function showAdReward() {
         });
 }
 
+function checkFirstLaunch() {
+    return localStorage.getItem('hasLaunched') === null; // Проверяем, был ли первый запуск
+}
+
+function setFirstLaunch() {
+    localStorage.setItem('hasLaunched', 'true'); // Устанавливаем, что игра была запущена
+}
+
 let timerInterval;
 let startTime;
 const difficultyLevels = {
-    easy: 1,
-    medium: 45,
-    hard: 53,
-    expert: 58, // Добавьте уровень для Эксперта
-    extreme: 64, // Добавьте уровень для Экстремального
+    easy: 29,
+    medium: 38,
+    hard: 44,
+    expert: 52, // Добавьте уровень для Эксперта
+    extreme: 58, // Добавьте уровень для Экстремального
 };
 let currentLevel = '';
 let selectedCell = null; // Переменная для хранения выбранной ячейки
@@ -1101,7 +1109,14 @@ function startGame(level) {
     generateSudokuBoard(level);
     startTimer(); // Запускать таймер с нуля
 
-    checkAndShowAd();
+// Если это первый запуск, не показывайте рекламу
+if (checkFirstLaunch()) {
+            setFirstLaunch(); // Обновляем статус, что игра была запущена
+        } else {
+            // Показываем межэкранную рекламу, если это не первый запуск
+            checkAndShowAd();; // Показываем рекламу
+        }
+
     // Показ баннера рекламы, когда игра начинается
     showBannerAd();
 
