--- a/index.html
+++ b/index.html
@@ -700,43 +700,38 @@ let statistics = {
 };
 
 function updateStatistics(level, elapsedTime) {
-    // Загружаем текущую статистику из localStorage
-    statistics = JSON.parse(localStorage.getItem('sudokuStatistics')) || statistics;
+    // Загружаем текущую статистику из VK
+    vkBridge.send('VKWebAppStorageGet', { key: 'sudokuStatistics' })
+        .then(data => {
+            if (data && data.value) {
+                statistics = JSON.parse(data.value) || statistics;
+            }
 
-    // Обновляем статистику
-    statistics[level].wins += 1;
+            // Обновляем статистику
+            statistics[level].wins += 1;
 
-    // Обновляем лучшее время
-    if (statistics[level].bestTime === "00:00" || compareTimes(elapsedTime, statistics[level].bestTime) < 0) {
-        statistics[level].bestTime = elapsedTime;
-    }
+            // Обновляем лучшее время
+            if (statistics[level].bestTime === "00:00" || compareTimes(elapsedTime, statistics[level].bestTime) < 0) {
+                statistics[level].bestTime = elapsedTime;
+            }
 
-    // Обновляем общее количество побед и лучшее время
-    statistics.total.wins += 1;
-    // Логика для общего времени, можете добавить на свой вкус.
+            // Обновляем общее количество побед
+            statistics.total.wins += 1;
 
-    // Сохраняем обновленную статистику в localStorage
-    localStorage.setItem('sudokuStatistics', JSON.stringify(statistics));
-}
-
-function updateStatistics(level, elapsedTime) {
-    // Загружаем текущую статистику из localStorage
-    statistics = JSON.parse(localStorage.getItem('sudokuStatistics')) || statistics;
-
-    // Обновляем статистику
-    statistics[level].wins += 1;
-
-    // Обновляем лучшее время
-    if (statistics[level].bestTime === "00:00" || compareTimes(elapsedTime, statistics[level].bestTime) < 0) {
-        statistics[level].bestTime = elapsedTime;
-    }
-
-    // Обновляем общее количество побед и лучшее время
-    statistics.total.wins += 1;
-    // Логика для общего времени, можете добавить на свой вкус.
-
-    // Сохраняем обновленную статистику в localStorage
-    localStorage.setItem('sudokuStatistics', JSON.stringify(statistics));
+            // Сохраняем обновленную статистику
+            return vkBridge.send('VKWebAppStorageSet', {
+                key: 'sudokuStatistics',
+                value: JSON.stringify(statistics)
+            });
+        })
+        .then(data => {
+            if (data.result) {
+                console.log('Статистика обновлена успешно');
+            }
+        })
+        .catch(error => {
+            console.error('Ошибка при обновлении статистики:', error);
+        });
 }
 
 function loadStatistics() {
@@ -751,6 +746,12 @@ function loadStatistics() {
         });
 }        
 
+function initialize() {
+    loadStatistics(); // Загрузка статистики перед использованием
+    setTheme(); // Установка темы
+    showMenu(); // Показ меню
+}
+        
 function compareTimes(time1, time2) {
     const [min1, sec1] = time1.split(':').map(Number);
     const [min2, sec2] = time2.split(':').map(Number);
@@ -1500,6 +1501,9 @@ function restartGame() {
     showBannerAd();
 }
 
+// Вызов в основном теле скрипта
+initialize(); // Здесь, после всех объявленных функций
+        
 setTheme();
 
         // Изначальная загрузка меню
